gloo-edge/graphql/grpc/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      cors:
        allowCredentials: true
        allowHeaders:
        - content-type
        allowMethods:
        - POST
        allowOriginRegex:
        - \*
    routes:
    - graphqlApiRef:
        name: default-users-8080
        namespace: gloo-system
      matchers:
      - prefix: /users
